--- a/index.html
+++ b/index.html
@@ -1,44 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD330 | Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
     <header>
-
-    </header>
-    <main>
-
-    </main>
-    <footer>
-        <div class="container-fluid" id="contact">
-          <div class="row">
-            <div class="col-sm-12 col-md-6">
-              <h5><i class="fas fa-dragon"></i>Drackode</h5>
-              <p>&copy; 2021 | Drackode | Aguascalientes, Mexico</p>
-              <br>
-            </div>
-            <div class="col-sm-12 col-md-3">
-              <h5>Contacto</h5>
-              <p><i class="fas fa-envelope"></i> dr4ckode@gmail.com </p>
-              <p><i class="fa fa-phone"></i>  449-190-47-83 </p>
-              <br>
-            </div>
-            <div class="col-sm-12 col-md-3 social-media">
-              <h5>Redes Sociales</h5>
-              <a href="https://www.facebook.com/jose.e.mena.14/" target="_blank"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.instagram.com/jmena.4/?hl=es-la" target="_blank"><i class="fa fa-instagram"></i></a>
-              <br>
-            </div>
-          </div>
+        <div class="title">
+            <h2 class="course"><a href="#">WDD330</a></h2>
+            <h2>Eduardo Mena</h2>
         </div>
-      </footer>
-      <a href="https://wa.me/524491904783/?text=Hola" target="_blank" id="contact-whats"><i class="fa fa-whatsapp"></i></a> 
+    </header>
+
+    <main>
+        <div id="main-content">
+            <h2>Portfolio</h2>
+            <ol id="week-links">
+
+            </ol>
+        </div>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="logo">
+                <a href="#" class="brand-logo"><i class="fas fa-dragon"></i> Drackode</a>
+                <p>&copy; 2021 | Drackode | Aguascalientes, Mexico</p>
+            </div>
+            <div class="contact">
+                <h2>Contact</h2>
+                <p><i class="fas fa-envelope"></i> dr4ckode@gmail.com </p>
+                <p><i class="fa fa-phone"></i> + 52 4491904783 </p>
+            </div>
+            <div class="social-media">
+                <h2>Social Media</h2>
+                <a href="https://www.facebook.com/jose.e.mena.14/" target="_blank"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.instagram.com/jmena.4/?hl=es-la" target="_blank"><i
+                        class="fa fa-instagram"></i></a>
+            </div>
+        </div>
+    </footer>
+    <a href="https://wa.me/524491904783/?text=Hola" target="_blank" id="contact-whats"><i
+            class="fa fa-whatsapp"></i></a>
 </body>
-<script src="main.js"></script>
+<script src="js/main.js"></script>
 <script src="https://kit.fontawesome.com/20512df472.js" crossorigin="anonymous"></script>
+
 </html>
