--- a/week06/index.html
+++ b/week06/index.html
@@ -21,9 +21,9 @@
                 </ul>
                 <div class="info">
                     <div id="num-task">0 tasks left</div>
-                    <input type="button" id="all" value="All.">
-                    <input type="button" id="active" value="Active.">
-                    <input type="button" id="complete" value="Completed">
+                    <input class="tab selected-tab" type="button" id="all" value="All.">
+                    <input class="tab" type="button" id="active" value="Active.">
+                    <input class="tab" type="button" id="complete" value="Completed">
                 </div>
             </div>
             <div id="footer-app">
