--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#" id="brand" >Pelis-Master <i class="fas fa-video"></i></a>
+                <a class="navbar-brand" href="#" id="brand">Pelis-Master <i class="fas fa-video"></i></a>
                 <form id="search-movie" class="form-inline my-2 my-lg-0">
                     <input class="form-control me-2" id="search" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
@@ -29,10 +29,9 @@
                     <h2 class="mb-title">Pelis-Master</h2>
                     <span class="mb-rate">10 <i class="fas fa-star"></i></span>
                     <div class="mb-desc">
-                        Watch the latest reviews of the last movies on the media and the cinema.
-                        Look the best of them and save time to watch them on the apropiate
-                        platforms or theather where you have acces!!!
-                    </div>                
+                        Watch the latest reviews of the last movies on the media and the cinema. Look the best of them
+                        and save time to watch them on the appropriate platforms or theater where you have access!!!
+                    </div>
                 </div>
             </div>
         </div>
