--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#" id="brand">Pelis-Master <i class="fas fa-video"></i></a>
+                <a class="navbar-brand" id="brand">Pelis-Master <i class="fas fa-video"></i></a>
                 <form id="search-movie" class="form-inline my-2 my-lg-0">
                     <input class="form-control me-2" id="search" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
@@ -34,6 +34,10 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="subnav">
+            <button type="button" class="btn btn-danger" id="all">All</button>
+            <button type="button" class="btn btn-warning" id="fav">Favorites</button>
         </div>
     </header>
     <main>
