--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
-                <a class="navbar-brand" id="brand">Pelis-Master <i class="fas fa-video"></i></a>
+                <a class="navbar-brand" id="brand">Movie-Master <i class="fas fa-video"></i></a>
                 <form id="search-movie" class="form-inline my-2 my-lg-0">
                     <input class="form-control me-2" id="search" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-danger my-2 my-sm-0" type="submit">Search</button>
@@ -26,7 +26,7 @@
         <div id="banner">
             <div class="movie-banner">
                 <div class="mb-info">
-                    <h2 class="mb-title">Pelis-Master</h2>
+                    <h2 class="mb-title">Movie-Master</h2>
                     <span class="mb-rate">10 <i class="fas fa-star"></i></span>
                     <div class="mb-desc">
                         Watch the latest reviews of the last movies on the media and the cinema. Look the best of them
@@ -35,9 +35,23 @@
                 </div>
             </div>
         </div>
-        <div id="subnav">
-            <button type="button" class="btn btn-danger" id="all">All</button>
-            <button type="button" class="btn btn-warning" id="fav">Favorites</button>
+        <div id="filters">
+            <div id="options">
+                <button type="button" class="btn btn-danger" id="all">All</button>
+                <button type="button" class="btn btn-warning" id="fav">Favorites</button>
+            </div>
+            <div id="subnav">
+                <button type="button" class="btn btn-warning" id="cat-28">Action</button>
+                <button type="button" class="btn btn-warning" id="cat-80">Crime</button>
+                <button type="button" class="btn btn-warning" id="cat-99">Documentary</button>
+                <button type="button" class="btn btn-warning" id="cat-10751">Family</button>
+                <button type="button" class="btn btn-warning" id="cat-27">Horror</button>
+                <button type="button" class="btn btn-warning" id="cat-36">History</button>
+                <button type="button" class="btn btn-warning" id="cat-27">Horror</button>
+                <button type="button" class="btn btn-warning" id="cat-16">Kids</button>
+                <button type="button" class="btn btn-warning" id="cat-10749">Romance</button>
+                <button type="button" class="btn btn-warning" id="cat-878">Science Fiction</button>
+            </div>
         </div>
     </header>
     <main>
