style last version

--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-light ">
             <div class="container-fluid">
                 <a class="navbar-brand" id="brand">Movie-Master <i class="fas fa-video"></i></a>
@@ -23,6 +24,7 @@
             </div>
             </div>
         </nav>
+        <!-- Banner -->
         <div id="banner">
             <div class="movie-banner">
                 <div class="mb-info">
@@ -35,10 +37,11 @@
                 </div>
             </div>
         </div>
+        <!-- Filters for to serach movies -->
         <div id="filters">
             <div id="options">
                 <button type="button" class="btn btn-danger" id="all">All</button>
-                <button type="button" class="btn btn-warning" id="fav">Favorites</button>
+                <button type="button" class="btn btn-danger" id="fav">Favorites</button>
             </div>
             <div id="subnav">
                 <button type="button" class="btn btn-warning" id="cat-28">Action</button>
@@ -54,12 +57,35 @@
             </div>
         </div>
     </header>
+
+    <!-- Catalog of movies -->
     <main>
         <div id="main-content"></div>
     </main>
-    <footer>
 
-    </footer>
+    <footer>
+        <div class="container-fluid" id="contact">
+          <div class="row" id="footer">
+            <div class="col-sm-12 col-md-6">
+              <h3 id="fbrand">Movie-Master <i class="fas fa-video"></i></h3>
+              <p>&copy; 2021 | Movie-Master | Aguascalientes, Mexico</p>
+              <br>
+            </div>
+            <div class="col-sm-12 col-md-3">
+              <h3>Contact</h3>
+              <p><i class="fas fa-envelope"></i> dr4ackode@gmail.com </p>
+              <p><i class="fa fa-phone"></i>  449-90-47-83 </p>
+              <br>
+            </div>
+            <div class="col-sm-12 col-md-3 social-media">
+              <h3>Redes Sociales</h3>
+              <a href="https://www.facebook.com/jose.e.mena.14/" target="_blank"><i class="fa fa-facebook"></i></a>
+              <a href="https://www.instagram.com/jmena.4/" target="_blank"><i class="fa fa-instagram"></i></a>
+              <br>
+            </div>
+          </div>
+        </div>
+      </footer>
     <script src="js/main.js" type="module"></script>
     <script src="https://kit.fontawesome.com/20512df472.js" crossorigin="anonymous"></script>
 </body>
