--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -66,7 +66,7 @@
           <div class="row" id="footer">
             <div class="col-sm-12 col-md-6">
               <h3 id="fbrand">Movie-Master <i class="fas fa-video"></i></h3>
-              <p>&copy; 2021 | Movie-Master | Aguascalientes, Mexico</p>
+              <p>&copy; 2021 | Eduardo Mena | Aguascalientes, Mexico</p>
               <br>
             </div>
             <div class="col-sm-12 col-md-3">
