--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -71,14 +71,14 @@
             </div>
             <div class="col-sm-12 col-md-3">
               <h3>Contact</h3>
-              <p><i class="fas fa-envelope"></i> dr4ackode@gmail.com </p>
-              <p><i class="fa fa-phone"></i>  449-90-47-83 </p>
+              <p><i class="fas fa-envelope"></i> dr4ckode@gmail.com </p>
+              <p><i class="fa fa-phone"></i>  449-123-45-67 </p>
               <br>
             </div>
             <div class="col-sm-12 col-md-3 social-media">
               <h3>Redes Sociales</h3>
-              <a href="https://www.facebook.com/jose.e.mena.14/" target="_blank"><i class="fa fa-facebook"></i></a>
-              <a href="https://www.instagram.com/jmena.4/" target="_blank"><i class="fa fa-instagram"></i></a>
+              <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
+              <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
               <br>
             </div>
           </div>
